# suricata_es_shipper

./: Cargo.toml  README.md  es_shipper.sh
src/: main.rs
